o Removed code duplication  o Attempted to make testcase play better with different operating systems
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44091 13f79535-47bb-0310-9956-ffa450edef68